glupload: don't determine if frame needs upload by pointer compare

https://bugzilla.gnome.org/show_bug.cgi?id=734269